[gd_scene load_steps=16 format=3 uid="uid://bwyptp6use13b"]

[ext_resource type="Script" path="res://managers/inventory_ui.gd" id="1_uwcms"]
[ext_resource type="Script" path="res://managers/equipment_view.gd" id="2_2k4to"]
[ext_resource type="PackedScene" uid="uid://b0vk0ex2rwovq" path="res://managers/item_preview.tscn" id="2_q8hnx"]
[ext_resource type="PackedScene" uid="uid://xb1xjeyys1pf" path="res://managers/item_description.tscn" id="3_vtuvf"]
[ext_resource type="FontFile" uid="uid://ch1217g2yvnil" path="res://assets/fonts/Jacquard24-Regular.ttf" id="4_lulr8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c17vv"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 0)
border_width_bottom = 1
border_color = Color(1, 0.87468, 0.398428, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58886"]
bg_color = Color(0.184314, 0.105882, 0.109804, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m8edx"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0)
border_width_bottom = 1
border_color = Color(1, 0.87468, 0.398428, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ksi4o"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4qpn"]
bg_color = Color(0.184314, 0.105882, 0.109804, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xes6r"]
bg_color = Color(0.184314, 0.105882, 0.109804, 0.862745)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ii0e3"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7510"]
bg_color = Color(0.184314, 0.105882, 0.109804, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_etpbo"]
bg_color = Color(0.184314, 0.105882, 0.109804, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qmkq"]
bg_color = Color(0.182665, 0.105208, 0.10977, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.478431, 0.211765, 0.266667, 0.768627)
border_blend = true
shadow_color = Color(0.00663366, 0.00137899, 0.000550259, 0.278431)
shadow_size = 4

[node name="InventoryUi" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_top = 56.0
offset_right = 960.0
offset_bottom = 1136.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_uwcms")

[node name="ItemDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -843.0
offset_right = 817.0
offset_bottom = 45.0
grow_horizontal = 2
mouse_filter = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_unselected_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 0.87468, 0.398428, 1)
theme_override_fonts/font = ExtResource("4_lulr8")
theme_override_font_sizes/font_size = 36
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_c17vv")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_58886")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_m8edx")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_c17vv")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_ksi4o")
current_tab = 0

[node name="ItemsView" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/ItemsView"]
custom_minimum_size = Vector2(1660, 940)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 940.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m4qpn")

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/ItemsView/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/ItemsView/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(820, 0)
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 240
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/ItemsView/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ItemsContainer" type="VBoxContainer" parent="TabContainer/ItemsView/PanelContainer/HBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemDescription" parent="TabContainer/ItemsView/PanelContainer/HBoxContainer" instance=ExtResource("3_vtuvf")]
layout_mode = 2

[node name="EquipmentView" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_2k4to")
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/EquipmentView"]
custom_minimum_size = Vector2(1650, 940)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 940.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="EquipmentList" type="PanelContainer" parent="TabContainer/EquipmentView/HBoxContainer"]
custom_minimum_size = Vector2(550, 820)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xes6r")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/EquipmentView/HBoxContainer/EquipmentList"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/EquipmentView/HBoxContainer/EquipmentList/MarginContainer"]
layout_mode = 2

[node name="EquipmentSlotButtonsContainer" type="VBoxContainer" parent="TabContainer/EquipmentView/HBoxContainer/EquipmentList/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(473, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="EquipmentHeader" type="Label" parent="TabContainer/EquipmentView/HBoxContainer/EquipmentList/MarginContainer/ScrollContainer/EquipmentSlotButtonsContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_ii0e3")
text = "Equipment"

[node name="ItemPreview" parent="TabContainer/EquipmentView/HBoxContainer" instance=ExtResource("2_q8hnx")]
custom_minimum_size = Vector2(550, 820)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_p7510")

[node name="CharacterStats" type="PanelContainer" parent="TabContainer/EquipmentView/HBoxContainer"]
custom_minimum_size = Vector2(550, 820)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_etpbo")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/EquipmentView/HBoxContainer/CharacterStats"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/EquipmentView/HBoxContainer/CharacterStats/MarginContainer"]
layout_mode = 2

[node name="StatsDisplay" type="VBoxContainer" parent="TabContainer/EquipmentView/HBoxContainer/CharacterStats/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EquipButton" type="Button" parent="TabContainer/EquipmentView/HBoxContainer/CharacterStats/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(534, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(1, 0.87468, 0.398428, 1)
theme_override_colors/font_hover_color = Color(0.996505, 0.683987, 0.0276063, 1)
theme_override_colors/font_pressed_color = Color(1, 0.87468, 0.398428, 1)
theme_override_colors/font_focus_color = Color(0.996505, 0.683987, 0.0276063, 1)
theme_override_colors/font_color = Color(1, 0.87468, 0.398428, 1)
theme_override_fonts/font = ExtResource("4_lulr8")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxFlat_1qmkq")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_1qmkq")
theme_override_styles/hover = SubResource("StyleBoxFlat_1qmkq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1qmkq")
theme_override_styles/normal = SubResource("StyleBoxFlat_1qmkq")
text = "Equip"

[connection signal="pressed" from="TabContainer/EquipmentView/HBoxContainer/CharacterStats/MarginContainer/VBoxContainer/EquipButton" to="." method="_on_equip_button_pressed"]
